# docs/swagger.json
@@ -4,6 +4,38 @@
         "contact": {}
     },
     "paths": {
+        "/page/{page}": {
+            "get": {
+                "description": "Retorna as receita paginadas",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recipe"
+                ],
+                "summary": "Retorna as receita paginadas",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Número da page",
+                        "name": "page",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Pagination"
+                        }
+                    }
+                }
+            }
+        },
         "/recipe": {
             "put": {
                 "description": "Atualizar a receita",
@@ -430,6 +462,27 @@
                     "type": "string"
                 },
                 "qty": {
+                    "type": "number"
+                }
+            }
+        },
+        "entity.Pagination": {
+            "type": "object",
+            "properties": {
+                "currentPage": {
+                    "type": "integer"
+                },
+                "items": {},
+                "next": {
+                    "type": "integer"
+                },
+                "previous": {
+                    "type": "integer"
+                },
+                "recordPerPage": {
+                    "type": "integer"
+                },
+                "totalPage": {
                     "type": "integer"
                 }
             }
